--- a/css/message.css
+++ b/css/message.css
@@ -677,7 +677,7 @@ ion-icon {
 /* chatheads */
 .chatheads {
 
-    width: 20%;
+    flex: 1;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -792,7 +792,7 @@ ion-icon {
 
 .chat_box_containner {
 
-    flex: 1;
+    width: 80%;
     display: flex;
     height: 100%;
 }
@@ -1008,11 +1008,12 @@ ion-icon {
 .send_message_group {
 
     width: 100%;
-    height: 10%;
+    max-width: 100%;
+    height: fit-content;
     background: #fff;
-    padding: 2%;
+    padding: 1%;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-evenly;
 }
 
@@ -1030,7 +1031,7 @@ ion-icon {
 }
 
 .message_input_containner {
-
+    
     flex-grow: 1;
     border-radius: 20px;
     padding: 10px;
@@ -1040,6 +1041,108 @@ ion-icon {
     display: flex;
     flex-direction: column;
     justify-content: start;
+}
+
+/* hidden */
+.message_img_preview_group {
+
+    width: 100%; /* Ensures it spans the available width */
+    max-width: 100vw; /* Prevents it from expanding beyond the parent container */
+    display: none;
+    align-items: center;
+    justify-content: start;
+    padding: 5px;
+    background: none;
+    margin-bottom: 1%;
+    overflow-x: auto; /* Enables horizontal scrolling */
+    overflow-y: hidden; /* Ensures no vertical scrolling appears */
+    white-space: nowrap; /* Keeps all child elements on a single line */
+}
+
+.message_img_preview_group.show {
+
+    display: flex;
+}
+
+#imagePreviewContainer {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    background: none;
+    gap: 10px; /* Adds space between previews */
+    overflow-x: visible; /* This is managed by the parent `.message_img_preview_group` */
+}
+
+#add_img {
+
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    background: #fff;
+    border-radius: 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+#add_img:hover {
+
+    background: #e5bfff;
+}
+
+.add_svg {
+
+    width: min-content;
+    height: min-content;
+}
+
+.img_preview_wrap {
+
+    position: relative;
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.message_img_preview {
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Scales down the image to fit within bounds without stretching */
+}
+
+.img_close_wrap {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    padding: 1px;
+    border-radius: 50%;
+    background: #e5bfff;
+    transition: all 0.2s ease;
+}
+
+.img_close_wrap:hover {
+
+    background: #9f1bf7;
+    color: #fff;
+}
+
+.close_img_preview {
+
+    font-size: 16px;
 }
 
 #message {
