--- a/css/home.css
+++ b/css/home.css
@@ -261,6 +261,8 @@ ion-icon {
     margin-left: 10px;
     width: 200px;
     background: none;
+    font-size: 0.8rem;
+    color: #00000095;
 }
 
 /* search_bar_dropdown */
@@ -350,6 +352,11 @@ ion-icon {
 
     font-size: 1rem;
     margin-left: 10px;
+}
+
+.result_username_text {
+
+    color: #000;
 }
 
 
