--- a/css/home.css
+++ b/css/home.css
@@ -72,31 +72,22 @@ html, body {
     -webkit-overflow-scrolling: touch; /* Enable smooth scrolling for mobile */
 }
 
+.black_overlay {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #0000008c;
+    z-index: 900;
+}
+
+.black_overlay.show {
+    display: block;
+}
+
 /* header */
-
-/* media queries */
-@media (max-width: 1018px) {
-
-    .search_input {
-
-        display: none;
-    }
-
-}
-
-@media (max-width: 810px) {
-
-
-    .middle_icons {
-
-        display: none;
-    }
-
-    .menu_btn {
-
-        display: flex;
-    }
-}
 
 ion-icon {
 
@@ -383,7 +374,7 @@ ion-icon {
 
     position: relative;
     margin-right: 20px;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     height: fit-content;
@@ -1073,7 +1064,6 @@ ion-icon {
 
 .post {
 
-    position: relative;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -1096,6 +1086,11 @@ ion-icon {
     border-radius: 50%;
     box-shadow:  0px 1px 4px 1px #a8a8a8;
     margin-right: 10px;
+}
+
+.user_name {
+
+    color: #000;
 }
 
 .post_text {
@@ -1222,6 +1217,114 @@ ion-icon {
     color: #ff0000; /* This will change the icon to red */
 }
 
+/* comment tab */
+.comments-container {
+    width: 40%;
+    height: 70%;
+    background: none;
+    position: fixed;
+    top: 20%;
+    left: 30%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+}
+
+.comment_main_content {
+
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    justify-content: space-between;
+}
+
+.scrollable-comments {
+
+    padding: 2%;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+.comment-input {
+
+    justify-content: center;
+    display: flex;
+    padding: 2%;
+}
+
+.comment-textarea {
+    width: 70%;
+    max-height: 100px;
+    height: 50px;
+    font-size: 0.9rem;
+    border-radius: 10px;
+    background: #0000001d;
+    margin-right: 20px;
+    padding: 3%;
+}
+
+.comment-textarea::-webkit-scrollbar {
+    display: none;
+}
+
+.comment {
+    position: relative;
+    display: flex;
+    border-radius: 10px;
+    padding-bottom: 10px;
+}
+
+.comment_user_img {
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.comment-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.comment-info {
+    font-size: 0.9rem;
+    color: #00000077;
+    margin-top: 10px;
+    display: flex;
+}
+
+.comment-info p {
+    margin-right: 15px;
+}
+
+.comment-like-section {
+    position: absolute;
+    right: 0;
+}
+
+.comment-like-section button {
+    background: none;
+}
+
+.like-count {
+    display: flex;
+}
+
+.submit-comment {
+    height: 50px;
+    background: none;
+}
+
+#send_icon {
+    font-size: 20px;
+}
+
+/* comment tab ending */
+
 /* post option box */
 
 .option_box {
@@ -1328,6 +1431,8 @@ ion-icon {
     background: #ffffff4f;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur( 10px );
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .main_comments {
@@ -2366,4 +2471,28 @@ ion-icon {
     justify-content: center;
     height: fit-content;
 
+}
+
+/* media queries */
+@media (max-width: 1018px) {
+
+    .search_input {
+
+        display: none;
+    }
+
+}
+
+@media (max-width: 810px) {
+
+
+    .middle_icons {
+
+        display: none;
+    }
+
+    .menu_btn {
+
+        display: flex;
+    }
 }
